# iniread

./: .gitignore  CMakeLists.txt  Makefile  README  TODO  iniread.c  iniread.h  initest.c
include/: hash.h  iniread.h  interpolate.h  readline.h
src/: CMakeLists.txt  Makefile  hash.c  iniread.c  interpolate.c  readline.c  string_set.c  types.c
tests/: CMakeLists.txt  compare.c  dag.cfg  initest.c  interp.c  ref.cfg  test.cfg
